testdata/baselines/reference/submodule/conformance/inferringClassMembersFromAssignments3.errors.txt
a.js(3,14): error TS2339: Property 'p' does not exist on type 'Base'.
a.js(8,14): error TS2339: Property 'p' does not exist on type 'Derived'.


==== a.js (2 errors) ====
    class Base {
        constructor() {
            this.p = 1
                 ~
!!! error TS2339: Property 'p' does not exist on type 'Base'.
        }
    }
    class Derived extends Base {
        m() {
            this.p = 1
                 ~
!!! error TS2339: Property 'p' does not exist on type 'Derived'.
        }
    }
    